feat: add Google Sign-In functionality for enhanced user authentication

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,11 @@
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <!-- Google Identity Services -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <!-- Cloudflare Web Analytics -->
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
     data-cf-beacon='{"token": "6b5f31413a444a61842e720a7e14aa7f"}'></script>
-  <!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
